ensure main is visible below header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,8 +121,11 @@ header a {
 }
 
 
-/* Main */
 
+/* Main */
+main {
+    margin-top: 50px;
+}
 
 
 /* Footer */ 
